--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <title>菜鸟教程(runoob.com)</title> 
  <link rel="stylesheet" href="style.css">
 </head> 
+ <style>
+  p{color:red;}
+ </style>
 <body>
 
 <iframe src="demo_iframe.htm" width="200" height="200"></iframe>
