--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
 <title>菜鸟教程(runoob.com)</title> 
  <link rel="stylesheet" href="eaglefight.github.io/style.css">
 </head> 
- <style>
-  p{color:red;}
- </style>
 <body>
 
-<iframe src="demo_iframe.htm" width="200" height="200"></iframe>
-
-<p>一些旧的浏览器不支持 iframe。</p>
-<p>如果浏览器不支持 iframes 则不会显示。</p>
- <a href="hello.html">hellp</a>
+ <p>hello</p>
 
 </body>
 </html>
