--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 <meta charset="utf-8"> 
 <title>菜鸟教程(runoob.com)</title> 
- <link rel="stylesheet" href="eaglefight.github.io/style.css">
+ <link rel="stylesheet" href="eaglefight.github.io/trunk/style.css">
 </head> 
 <body>
 
