--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>世界你好</h1>
-<a href="https://eaglefight.github.io/hello.html">试下试下</a>
+<a href="hello.html">试下试下</a>
 </body>
 </html>
