--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
 <h1>世界你好</h1>
 <a href="hello.html">试下试下</a>
+<audio controls="controls" autoplay="autoplay">
+    <source src="song.ogg" type="audio/ogg" />
+    <source src="yedegangqinqu.mp3" type="audio/mpeg" />
+    Your browser does not support the audio element.
+</audio>
 <script>
     alert('hello world');
 </script>
