--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery-2.1.0.js"></script>
     <script src="js/index.js"></script>
 </head>
-<body>
+<body style="width: 10rem;margin: auto;">
 <h1>世界你好</h1>
 <a href="hello.html">试下试下</a>
 <audio controls="controls" autoplay="autoplay">
@@ -14,7 +15,9 @@
     <source src="yedegangqinqu.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
 </audio>
+<div id="div"></div>
 <script>
+    $('#div').load('a.txt p#2a');
     alert('hello world');
 </script>
 </body>
