--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ return;
 
 
 db.transaction(function (trans) {
-trans.executeSql("create table if not exists Demo(uName text null,title text null,words text null)", [], function (trans, result) {
+trans.executeSql("create table if not exists Demo1(uName text null,title text null,words text null)", [], function (trans, result) {
 
 }, function (trans, message) {
 alert(message);
@@ -48,7 +48,7 @@ var db = getCurrentDb();
 //插入数据
 db.transaction(function (trans) {
 
-trans.executeSql("insert into Demo(uName,title,words) values(?,?,?) ", [txtName, txtTitle, txtWords], function (ts, data) {
+trans.executeSql("insert into Demo1(uName,title,words) values(?,?,?) ", [txtName, txtTitle, txtWords], function (ts, data) {
 
 }, function (ts, message) {
 alert(message);
@@ -62,7 +62,7 @@ showAllTheData();
 
 function getCurrentDb() {
 //打开数据库，或者直接连接数据库参数：数据库名称，版本，概述，大小
-var db = openDatabase("myDb", "1.0", "it's to save demo data!", 1024 * 1024); ;
+var db = openDatabase("myDb", "1.0", "it's to save demo1 data!", 1024 * 1024); ;
 return db;
 
 }
@@ -72,7 +72,7 @@ $("#tblData").empty();
 var db = getCurrentDb();
 
 db.transaction(function (trans) {
-trans.executeSql("select * from Demo ", [], function (ts, data) {
+trans.executeSql("select * from Demo1 ", [], function (ts, data) {
 if (data) {
 for (var i = 0; i < data.rows.length; i++) {
 appendDataToTable(data.rows.item(i));//获取某行数据的json对象
