--- a/index.html
+++ b/index.html
@@ -132,5 +132,9 @@ $("#tblData").append(strHtml);
     <table id="tblData">
 
     </table>
+<div style="width: 10rem;height: 10rem;text-align: center;line-height: 10rem;">
+
+    <img src="baby02.png" style="height: 5rem;display: inline-block;vertical-align: middle;">
+</div>
 </body>
 </html>
