--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/json.js"></script>
 </head>
 <body style="width: 10rem;margin: auto;">
-<audio controls="controls" autoplay="autoplay">
+<audio controls="controls" autoplay="autoplay" loop="loop" style="display: none;">
     <source src="song.ogg" type="audio/ogg" />
     <source src="yedegangqinqu.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
