--- a/hello.html
+++ b/hello.html
@@ -5,10 +5,13 @@
     <title>Title</title>
     <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/common.css">
     <script src="js/jquery-2.1.0.js"></script>
     <script src="js/index.js"></script>
     <script src="js/json.js"></script>
+    <style>
+        form{width: 9rem;margin: 0 0.5rem;display: block;font-size: 0.4rem;}
+    </style>
 </head>
 <body style="width: 10rem;margin: auto;">
         <form action="haha.html" method="get">
