--- a/hello.html
+++ b/hello.html
@@ -10,14 +10,25 @@
     <script src="js/index.js"></script>
     <script src="js/json.js"></script>
     <style>
-        form{width: 9rem;margin: 0 0.5rem;display: block;font-size: 0.4rem;}
+        form{width: 9rem;margin: 1rem 0.5rem;display: block;font-size: 0.4rem;}
+        form>div{margin:0.5rem;}
+        form>div>input{
+            border:0;
+            border-bottom:1px solid rgb(160,160,160);
+            size: 4.57rem;
+            height: 0.5rem;
+            padding: 0;
+            font-size: 0.4rem;
+            outline:none;
+        }
+        form>button{background-color: #a2cff1;font-size: 0.4rem;color: white;width: 100%;height: 0.8rem;line-height: 0.8rem;border: 0;}
     </style>
 </head>
 <body style="width: 10rem;margin: auto;">
         <form action="haha.html" method="get">
-            姓名<input type="text" name="name"><br/>
-            密码<input type="password" name="password"><br/>
-            <button type="submit">提交</button>
+            <div><label>姓名</label><input type="text" name="name"></div>
+            <div><label>密码</label><input type="password" name="password"></div>
+            <button type="submit">登录</button>
         </form>
 </body>
 </html>
