--- a/hello.html
+++ b/hello.html
@@ -10,8 +10,9 @@
     <script src="js/index.js"></script>
     <script src="js/json.js"></script>
     <style>
-        form{width: 9rem;margin: 1rem 0.5rem;display: block;font-size: 0.4rem;}
-        form>div{margin:0.5rem;}
+        body>div{width: 9rem;margin: 0 0.5rem;}
+        form{width: 100%;margin-top: 2rem;margin-bottom:0.5rem;display: block;font-size: 0.4rem;}
+        form>div{margin:0.5rem 0;}
         form>div>input{
             border:0;
             width: 100%;
@@ -19,17 +20,24 @@
             border-bottom:1px solid rgb(160,160,160);
             size: 4.57rem;
             height: 1rem;
-            font-size: 0.4rem;
+            font-size: 0.5rem;
             outline:none;
         }
-        form>button{background-color: #a2cff1;font-size: 0.4rem;color: white;width: 100%;height: 0.8rem;line-height: 0.8rem;border: 0;}
+        form>button{background-color: #50aff7;font-size:0.5rem;color: white;width: 100%;height: 1.2rem;line-height: 0.8rem;border: 0;}
+        body>div>a{text-decoration: none;font-size: 0.35rem;color: #50aff7; }
+        body>div>a.forget{float: left;}
+        body>div>a.register{float: right;}
     </style>
 </head>
-<body style="width: 10rem;margin: auto;">
-        <form action="haha.html" method="get">
-            <div><input type="text" name="name" placeholder="请输入账号"></div>
-            <div><input type="password" name="password" placeholder="请输入密码"></div>
-            <button type="submit">登录</button>
-        </form>
+<body style="width: 10rem;margin: auto;font-size: 0.4rem;">
+        <div>
+
+            <form action="haha.html" method="get">
+                <div><input type="text" name="name" placeholder="请输入账号"></div>
+                <div><input type="password" name="password" placeholder="请输入密码"></div>
+                <button type="submit">登录</button>
+            </form>
+            <a class="forget">忘记密码?</a><a class="register">新用户注册</a>
+        </div>
 </body>
 </html>
