--- a/hello.html
+++ b/hello.html
@@ -2,18 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
     <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Title</title>
     <link rel="stylesheet" href="css/common.css">
     <script src="js/jquery-2.1.0.js"></script>
     <script src="js/index.js"></script>
     <script src="js/json.js"></script>
     <style>
-        body>div{width: 9rem;margin: 0 0.5rem;}
-        form{width: 100%;margin-top: 2rem;margin-bottom:0.5rem;display: block;font-size: 0.4rem;}
-        form>div{margin:0.5rem 0;}
-        form>div>input{
+        .clear{clear: both;width: 0;height: 0;}
+        body{background-color: lavender;margin-top: 0;}
+        .login{width: 9rem;margin: 0 0.5rem;}
+        .login>form{width: 100%;margin-top: 2rem;margin-bottom:0.5rem;display: block;font-size: 0.4rem;}
+        .login>form>div{margin:0.5rem 0;}
+         .login>form>div>input{
             border:0;
             width: 100%;
             padding:0;
@@ -23,21 +25,24 @@
             font-size: 0.5rem;
             outline:none;
         }
-        form>button{background-color: #50aff7;font-size:0.5rem;color: white;width: 100%;height: 1.2rem;line-height: 0.8rem;border: 0;}
-        body>div>a{text-decoration: none;font-size: 0.35rem;color: #50aff7; }
-        body>div>a.forget{float: left;}
-        body>div>a.register{float: right;}
+        .login>form>button{background-color: #50aff7;font-size:0.5rem;color: white;width: 100%;height: 1.2rem;line-height: 0.8rem;border: 0;}
+        .login>a{text-decoration: none;font-size: 0.35rem;color: #50aff7; }
+        .login>a.forget{float: left;}
+        .login>a.register{float: right;}
+        .login>.agree-service{text-align: center;font-size: 0.35rem;color: white;margin-top: 80%;}
+        .login>.agree-service>a{text-decoration: none;color: #50aff7; }
     </style>
 </head>
-<body style="width: 10rem;margin: auto;font-size: 0.4rem;">
-        <div>
-
+<body>
+        <div class="login">
             <form action="haha.html" method="get">
                 <div><input type="text" name="name" placeholder="请输入账号"></div>
                 <div><input type="password" name="password" placeholder="请输入密码"></div>
                 <button type="submit">登录</button>
             </form>
             <a class="forget">忘记密码?</a><a class="register">新用户注册</a>
+            <div class="clear"></div>
+            <p class="agree-service">登录即代表阅读并同意<a>服务条款</a></p>
         </div>
 </body>
 </html>
