--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Title</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <script src="js/jquery-2.1.0.js"></script>
     <script src="js/index.js"></script>
@@ -12,8 +13,8 @@
     <style>
         .clear{clear: both;width: 0;height: 0;}
         body{background-color: lavender;margin-top: 0;}
-        .login{width: 9rem;margin: 0 0.5rem;}
-        .login>form{width: 100%;margin-top: 2rem;margin-bottom:0.5rem;display: block;font-size: 0.4rem;}
+        .login{width: 9rem;margin: 0 0.5rem;margin-top: 2rem;}
+        .login>form{width: 100%;margin-bottom:0.5rem;font-size: 0.4rem;}
         .login>form>div{margin:0.5rem 0;}
          .login>form>div>input{
             border:0;
