--- a/hello.html
+++ b/hello.html
@@ -50,7 +50,7 @@
             <div><input type="password" name="password" placeholder="请输入密码"></div>
             <button type="submit">登录</button>
         </form>
-        <a class="forget">忘记密码?</a><a class="register">新用户注册</a>
+        <a class="forget" href="index.html">忘记密码?</a><a class="register">新用户注册</a>
         <div class="clear"></div>
         <p class="agree-service">登录即代表阅读并同意<a>服务条款</a></p>
     </div>
