--- a/hello.html
+++ b/hello.html
@@ -13,6 +13,7 @@
     <style>
         .clear{clear: both;width: 0;height: 0;}
         body{background-color: lavender;margin-top: 0;overflow: hidden;}
+        section{overflow: hidden;}
         .login{width: 9rem;margin: 0 0.5rem;margin-top: 2rem;}
         .login>.we-are-family{height: 1rem;line-height: 1rem;font-size: 1rem;}
         .login>.we-are-family>img{height: 1rem;width: auto;margin: 0; }
