--- a/hello.html
+++ b/hello.html
@@ -15,9 +15,7 @@
         body{background-color: lavender;margin-top: 0;overflow: hidden;}
         section{overflow: hidden;}
         .login{width: 9rem;margin: 0 0.5rem;margin-top: 2rem;}
-        .login>.we-are-family{height: 1rem;line-height: 1rem;font-size: 1rem;}
-        .login>.we-are-family>img{height: 1rem;width: auto;margin: 0; }
-        .login>.we-are-family>span{color: white;display: inline-block;vertical-align: middle;height: 1rem;}
+        .login>.we-are-family{height: 1rem;line-height: 1rem;font-size: 1rem;text-align: center;margin: 1rem 0;color: white;}
         .login>form{width: 100%;margin-bottom:0.5rem;font-size: 0.4rem;}
         .login>form>div{margin:0.5rem 0;}
          .login>form>div>input{
@@ -42,10 +40,9 @@
 <body>
 <section>
     <div class="login">
-        <div class="we-are-family">
-            <img src="img/icon/we_are_family.png">
-            <span>血浓于水</span>
-        </div>
+        <p class="we-are-family">
+            血浓于水
+        </p>
         <form action="haha.html" method="get">
             <div><input type="text" name="name" placeholder="请输入账号"></div>
             <div><input type="password" name="password" placeholder="请输入密码"></div>
