--- a/hello.html
+++ b/hello.html
@@ -15,7 +15,7 @@
         body{background-color: lavender;margin-top: 0;overflow: hidden;}
         section{overflow: hidden;}
         .login{width: 9rem;margin: 0 0.5rem;margin-top: 2rem;}
-        .login>.we-are-family{height: 1rem;line-height: 1rem;font-size: 1rem;text-align: center;margin: 1rem 0;color: white;}
+        .login>.we-are-family{height: 1rem;line-height: 1rem;font-size: 1rem;text-align: center;margin: 1rem 0;color: white;font-family: Arial;}
         .login>form{width: 100%;margin-bottom:0.5rem;font-size: 0.4rem;}
         .login>form>div{margin:0.5rem 0;}
          .login>form>div>input{
