--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Title</title>
+    <title>血浓于水，有你有我</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <script src="js/jquery-2.1.0.js"></script>
@@ -22,6 +22,7 @@
             border:0;
             width: 100%;
             padding:0;
+             color: white;
              background-color: lavender;
             border-bottom:1px solid rgb(160,160,160);
             size: 4.57rem;
@@ -29,6 +30,7 @@
             font-size: 0.5rem;
             outline:none;
         }
+        ::-webkit-input-placeholder{color: white;}
         .login>form>button{background-color: #50aff7;font-size:0.5rem;color: white;width: 100%;height: 1.2rem;line-height: 0.8rem;border: 0;}
         .login>a{text-decoration: none;font-size: 0.35rem;color: #50aff7; }
         .login>a.forget{float: left;}
