--- a/hello.html
+++ b/hello.html
@@ -24,7 +24,7 @@
             padding:0;
              color: white;
              background-color: lavender;
-            border-bottom:1px solid rgb(160,160,160);
+            border-bottom:1px solid white;
             size: 4.57rem;
             height: 1rem;
             font-size: 0.5rem;
