--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="width: 10rem;margin: auto;">
 <audio controls="controls" autoplay="autoplay" loop="loop">
     <source src="song.ogg" type="audio/ogg"/>
-    <source src="yedegangqinqu.mp3" type="audio/mpeg"/>
+    <source src="https://eaglefight.github.io/yedegangqinqu.mp3" type="audio/mpeg"/>
     Your browser does not support the audio element.
 </audio>
 <script>
