--- a/a.html
+++ b/a.html
@@ -1,5 +1,5 @@
 <li class="mui-table-view-cell mui-media">
-    <a href="javascript:;">
+    <a href="">
         <img class="mui-media-object mui-pull-left" src="http://placehold.it/40x30">
         <div class="mui-media-body">
             幸福
