--- a/xiaojiu.html
+++ b/xiaojiu.html
@@ -56,8 +56,9 @@ $.get('test.csv', function(data) {
             // 最后将数据 push 到数据列配置里
          
 //        }
-console.log(series);
+
     });
+	console.log(lines);
 	});
 	
 
