--- a/xiaojiu.html
+++ b/xiaojiu.html
@@ -52,8 +52,8 @@ $.get('test.csv', function(data) {
                 data: []
             };
 			for(var i = 0;i<items.length;i++){
-			console.log(item[i]);
-			tr+="<td>"+item[i]+"</td>";
+			console.log(items[i]);
+			tr+="<td>"+items[i]+"</td>";
 			}
 //            $.each(items, function(itemNo, item) {
 //             
