--- a/xiaojiu.html
+++ b/xiaojiu.html
@@ -36,6 +36,7 @@ $.get('test.csv', function(data) {
     $.each(lines, function(lineNo, line) {
         var items = line.split(',');
 		tr = "<tr>";
+		console.log(line);
 
 //        // 处理第一行，即分类
 //        if (lineNo == 0) {
