--- a/xiaojiu.html
+++ b/xiaojiu.html
@@ -34,7 +34,7 @@ $.get('test.csv', function(data) {
     // 遍历每一行
 	
     $.each(lines, function(lineNo, line) {
-        var items = line.split(',');
+        var items = line.split('，');
 		tr += "<tr>";
 		console.log(line);
 
