--- a/index.html
+++ b/index.html
@@ -1,130 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/common.css">
-    <script src="js/jquery-2.1.0.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/json.js"></script>
-</head>
-<body style="width: 10rem;margin: auto;">
-<audio controls="controls" autoplay="autoplay" loop="loop">
-    <source src="song.ogg" type="audio/ogg"/>
-    <source src="https://eaglefight.github.io/yedegangqinqu.mp3" type="audio/mpeg"/>
-    Your browser does not support the audio element.
-</audio>
-<script>
-    function initDatabase() {//初始化数据库
-        var db = getCurrentDb();
-        if (!db) {
-            alert("您的浏览器不支持HTML5");
-            return;
-        }
-        db.transaction(function (trans) {
-            trans.executeSql("CREATE TABLE IF NOT EXISTS Demo1(uName TEXT NULL,title TEXT NULL,words TEXT NULL)", [], function (trans, result) {
-
-            }, function (trans, message) {
-                alert(message);
-            });
-        }, function (trans, result) {
-        }, function (trans, message) {
-        });
-    }
-    $(function () {
-        initDatabase();
-        $("#btnSave").click(function () {
-            var txtName = $("#txtName").val();
-            var txtTitle = $("#txtTitle").val();
-            var txtWords = $("#txtWords").val();
-
-            var db = getCurrentDb();
-//插入数据
-            db.transaction(function (trans) {
-
-                trans.executeSql("INSERT INTO Demo1(uName,title,words) VALUES(?,?,?) ", [txtName, txtTitle, txtWords], function (ts, data) {
-
-                }, function (ts, message) {
-                    alert(message);
-                });
-
-            });
-            showAllTheData();
-
-        });
-    });
-    function getCurrentDb() {
-//打开数据库，或者直接连接数据库参数：数据库名称，版本，概述，大小
-        var db = openDatabase("myDb", "1.0", "it's to save demo1 data!", 1024 * 1024);
-        return db;
-    }
-    function showAllTheData() {
-        $("#tblData").empty();
-        var db = getCurrentDb();
-
-        db.transaction(function (trans) {
-            trans.executeSql("SELECT * FROM Demo1 ", [], function (ts, data) {
-                if (data) {
-                    for (var i = 0; i < data.rows.length; i++) {
-                        appendDataToTable(data.rows.item(i));//获取某行数据的json对象
-                    }
-                }
-            }, function (ts, message) {
-                alert(message);
-                var tst = message;
-            });
-
-        });
-    }
-    function appendDataToTable(data) {//将数据展示到表格里面
-//uName,title,words
-        var txtName = data.uName;
-        var txtTitle = data.title;
-        var words = data.words;
-
-        var strHtml = "";
-        strHtml += "<tr>";
-        strHtml += "<td>" + txtName + "</td>";
-        strHtml += "<td>" + txtTitle + "</td>";
-        strHtml += "<td>" + words + "</td>";
-        strHtml += "</tr>";
-        $("#tblData").append(strHtml);
-    }
-
+<meta charset="utf-8">
+<title>菜鸟教程(runoob.com)</title>
+<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
 </script>
+<script>
+$(document).ready(function(){
+	$("button").click(function(){
+		$("#div1").load("https://eaglefight.github.io/test.csv");
+	});
+});
+</script>
+</head>
+<body>
 
+<div id="div1"><h2>使用 jQuery AJAX 修改文本内容</h2></div>
+<button>获取外部内容</button>
 
-<table>
-    <tr>
-        <td>用户名：</td>
-        <td><input type="text" name="txtName" id="txtName" required/></td>
-
-    </tr>
-    <tr>
-        <td>标题：</td>
-        <td><input type="text" name="txtTitle" id="txtTitle" required/></td>
-
-    </tr>
-    <tr>
-        <td>留言：</td>
-        <td><input type="text" name="txtWords" id="txtWords" required/></td>
-
-    </tr>
-
-
-</table>
-<input type="button" value="保存" id="btnSave"/>
-
-<hr/>
-<input type="button" value="展示所哟数据" onclick="showAllTheData();"/>
-<table id="tblData">
-
-</table>
-<div style="width: 10rem;height: 10rem;text-align: center;line-height: 10rem;">
-
-    <img src="baby02.png" style="height: 5rem;display: inline-block;vertical-align: middle;">
-</div>
 </body>
 </html>
