--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script>
 $(document).ready(function(){
 	$("button").click(function(){
-		$("#div1").load("https://eaglefight.github.io/test.csv");
+		$("#div1").load("test.csv");
 	});
 });
 </script>
